[gd_scene load_steps=4 format=3 uid="uid://pagvwytvnpd5"]

[ext_resource type="FontFile" uid="uid://b8adavbtd6uxu" path="res://fonts/m5x7.ttf" id="1_fne7m"]
[ext_resource type="Script" uid="uid://6tro1ypy7ci4" path="res://main.gd" id="1_sdj6f"]
[ext_resource type="AudioStream" uid="uid://cn1fx71ely5rs" path="res://Beats to fish 2.wav" id="3_e0foe"]

[node name="main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_sdj6f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.218775, 0.305057, 0.51393, 1)

[node name="preamble" type="RichTextLabel" parent="."]
offset_left = 128.0
offset_top = 488.0
offset_right = 1024.0
offset_bottom = 514.0
theme_override_fonts/normal_font = ExtResource("1_fne7m")
theme_override_fonts/bold_font = ExtResource("1_fne7m")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "will you [color=yellow]go fishin[/color] or will you [color=yellow]teach a man to fish[/color]?"

[node name="dayScript" type="Label" parent="."]
offset_left = 128.0
offset_top = 376.0
offset_right = 574.0
offset_bottom = 513.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "its day %s
time to go fishin'
you have %s hungry mouths to feed
lucky you've got %s villagers who can help"

[node name="response" type="Label" parent="."]
visible = false
offset_left = 128.0
offset_top = 576.0
offset_right = 214.0
offset_bottom = 602.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "teaching"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 128.0
offset_top = 528.0
offset_right = 1024.0
offset_bottom = 562.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32

[node name="fishTotal" type="Label" parent="."]
offset_left = 320.0
offset_top = 48.0
offset_right = 506.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "fish caught today"
horizontal_alignment = 1
vertical_alignment = 1

[node name="villagersTotal" type="Label" parent="."]
offset_left = 640.0
offset_top = 48.0
offset_right = 768.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "villagers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="day" type="Label" parent="."]
offset_left = 128.0
offset_top = 48.0
offset_right = 256.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "Day 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fishermenTotal" type="Label" parent="."]
offset_left = 896.0
offset_top = 48.0
offset_right = 1024.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "friends: 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, 40)
points = PackedVector2Array(1088, 64, 64, 64)
default_color = Color(0.14902, 0.180392, 0.266667, 1)
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 128.0
offset_top = 80.0
offset_right = 256.0
offset_bottom = 91.0
max_value = 60.0
show_percentage = false

[node name="daySummary" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="daySummary"]
layout_mode = 1
anchors_preset = -1
anchor_left = -5.1
anchor_top = -3.5
anchor_right = 6.1
anchor_bottom = 4.5
offset_left = 524.0
offset_top = 300.0
offset_right = 524.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12868, 0.271898, 0.254811, 1)

[node name="daySummaryTitle" type="Label" parent="daySummary"]
layout_mode = 0
offset_left = 320.0
offset_top = 160.0
offset_right = 768.0
offset_bottom = 218.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "DAY XXX COMPLETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fishCaught" type="Label" parent="daySummary"]
layout_mode = 0
offset_left = 384.0
offset_top = 256.0
offset_right = 528.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "fish caught"
vertical_alignment = 1

[node name="villagers" type="Label" parent="daySummary"]
layout_mode = 0
offset_left = 384.0
offset_top = 296.0
offset_right = 512.0
offset_bottom = 322.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "villagers"
vertical_alignment = 1

[node name="fishermen" type="Label" parent="daySummary"]
layout_mode = 0
offset_left = 384.0
offset_top = 328.0
offset_right = 592.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "men taught to fish"
vertical_alignment = 1

[node name="fishCaught_total" type="Label" parent="daySummary"]
layout_mode = 0
offset_left = 576.0
offset_top = 256.0
offset_right = 704.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "XXX"
horizontal_alignment = 2
vertical_alignment = 1

[node name="villagers_total" type="Label" parent="daySummary"]
layout_mode = 0
offset_left = 576.0
offset_top = 296.0
offset_right = 704.0
offset_bottom = 322.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "XXX"
horizontal_alignment = 2
vertical_alignment = 1

[node name="fishermen_total" type="Label" parent="daySummary"]
layout_mode = 0
offset_left = 496.0
offset_top = 328.0
offset_right = 704.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "XXX"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="daySummary"]
position = Vector2(400, 208)
points = PackedVector2Array(-48, 0, 336, 0)
width = 2.0
begin_cap_mode = 2
end_cap_mode = 2

[node name="Button" type="Button" parent="daySummary"]
layout_mode = 0
offset_left = 496.0
offset_top = 416.0
offset_right = 592.0
offset_bottom = 456.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "continue"

[node name="fishTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="loadTimer" type="Timer" parent="."]

[node name="dayTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="teachTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="gameover" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="gameover"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.118007, 0.111529, 0.18746, 1)

[node name="Label" type="Label" parent="gameover"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 428.0
offset_top = 236.0
offset_right = 684.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "failed feeding fisher friends :'((

"
horizontal_alignment = 1

[node name="villagerFishTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="fishermanCatch" type="Label" parent="."]
visible = false
offset_left = 832.0
offset_top = 128.0
offset_right = 1088.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "fisherman caught a fish!"
horizontal_alignment = 1

[node name="displayTimer" type="Timer" parent="fishermanCatch"]
wait_time = 2.0
one_shot = true

[node name="beats to fish 2" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_e0foe")
volume_db = -8.0
autoplay = true

[node name="levelupText" type="Label" parent="."]
visible = false
offset_left = 448.0
offset_top = 128.0
offset_right = 704.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("1_fne7m")
theme_override_font_sizes/font_size = 32
text = "fish mastery up!"
horizontal_alignment = 1

[node name="displayTimer2" type="Timer" parent="levelupText"]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="daySummary/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="fishTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="loadTimer" to="." method="_on_load_timer_timeout"]
[connection signal="timeout" from="dayTimer" to="." method="_on_day_timer_timeout"]
[connection signal="timeout" from="teachTimer" to="." method="_on_teach_timer_timeout"]
[connection signal="timeout" from="villagerFishTimer" to="." method="_on_villager_fish_timer_timeout"]
[connection signal="timeout" from="fishermanCatch/displayTimer" to="." method="_on_display_timer_timeout"]
[connection signal="timeout" from="levelupText/displayTimer2" to="." method="_on_display_timer_2_timeout"]
